# container-source-policy

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .goreleaser.yml  .lefthook.yml  AGENTS.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  main.go  renovate.json
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yml
.serena/: project.yml
cmd/container-source-policy/cmd/: pin.go  root.go  version.go
httpchecksum/: README.md
internal/dhi/: mapper.go  mapper_test.go
internal/dockerfile/: parser.go  parser_test.go
internal/git/: client.go  client_test.go
internal/http/: client.go  client_test.go
internal/integration/: integration_test.go
internal/integration/__snapshots__/: TestPin_prefer-dhi-multistage_1.snap.json  TestPin_prefer-dhi-simple_1.snap.json  integration_test.snap
internal/pin/: pin.go
internal/registry/: client.go
internal/testutil/: mockhttpserver.go  mockregistry.go
internal/version/: version.go
packaging/: pack.rb
packaging/homebrew/: container-source-policy.rb.template  generate-formula.sh
packaging/npm/container-source-policy/: get-exe.js  (+1 more)
packaging/npm/container-source-policy-darwin-arm64/: package.json
packaging/npm/container-source-policy-darwin-x64/: package.json
packaging/npm/container-source-policy-freebsd-x64/: package.json
packaging/npm/container-source-policy-linux-arm64/: package.json
packaging/npm/container-source-policy-linux-x64/: package.json
packaging/pypi/: README.md  pyproject.toml
packaging/pypi/container_source_policy/: main.py
packaging/rubygems/: container-source-policy.gemspec
(+6 files in other folders)
